--- a/style.css
+++ b/style.css
@@ -1,62 +1,148 @@
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
 body {
   margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   display: flex;
   justify-content: center;
-  /* align-items: center; */
+  align-items: center;
+  height: fit-content;
+  font-size: 13px;
+  color: white;
+  font-family: "Barlow Semi Condensed", sans-serif;
+  background: hsl(0, 0%, 81%);
 }
 .grid {
+  padding: 20px;
   display: grid;
-  gap: 80px;
+  gap: 40px;
   grid-template-columns: auto auto auto auto;
   height: fit-content;
   width: 90%;
 }
 .card {
   background-color: aqua;
-  padding: 20px;
-  height: 200px;
+  height: 100%;
   width: 100%;
   font-size: 20px;
+  border-radius: 10px;
+  position: relative;
+}
+.inner {
+  padding: 20px;
 }
 .c1 {
   grid-column-start: 1;
   grid-column-end: 3;
+  background-color: hsl(263, 55%, 52%);
 }
-.c5 {
-  grid-column-start: 2;
-  grid-column-end: 4;
+.c2 {
+  background: hsl(217, 19%, 35%);
 }
 .c3 {
   grid-column: 4;
   grid-row-start: 1;
   grid-row-end: 3;
+  background: white;
+  color: black;
+}
+.c4 {
+  background: white;
+  color: black;
+}
+.c5 {
+  grid-column-start: 2;
+  grid-column-end: 4;
+  background: hsl(219, 29%, 14%);
 }
 .image {
   display: flex;
   gap: 10px;
-  height: 11%;
-  /* background-color: blue; */
+  height: 5%;
 }
-.image img {
+.qt {
+  height: 70px;
+  right: 20px;
+  top: 0;
+  position: absolute;
+}
+.person {
   border-radius: 50%;
+  height: 5%;
 }
 .caption {
   height: 100%;
-  /* background-color: brown; */
 }
 .caption h6 {
   margin-top: -25px;
+  color: hsla(0, 0%, 100%, 0.5);
 }
 .caption h4 {
   margin-top: 10px;
 }
-@media screen and (max-width: 768px) {
+.history {
+  color: hsla(0, 0%, 100%, 0.7);
+  font-weight: 500;
+}
+.review .rev{
+    font-weight: 600;
+}
+.c1 .review {
+    margin-top: -20px;
+}
+.c3 h6 {
+  color: hsl(0, 0%, 0%, 0.5);
+}
+.c4 h6 {
+  color: hsl(0, 0%, 0%, 0.5);
+}
+.c3 .history {
+  color: hsl(0, 0%, 0%, 0.7);
+  font-weight: 500;
+}
+.c4 .history {
+  color: hsl(0, 0%, 0%, 0.7);
+  font-weight: 500;
+}
+@media screen and (max-width: 600px) {
   .grid {
     display: flex;
     flex-direction: column;
+    margin: 30px 0;
+    padding: 0 50px;
   }
   body {
     display: flex;
     justify-content: center;
+    height: fit-content;
+  }
+  .qt{
+    height: 50px;
+  }
+}
+@media screen and (max-width: 1023px) and (min-width: 600px) {
+  .grid {
+    display: grid;
+    grid-template-columns: auto auto;
+  }
+  .c1 {
+    grid-column-start: 1;
+    grid-column-end: 3;
+  }
+  .c2 {
+    grid-column: 1/2;
+  }
+  .c4 {
+    grid-column: 2/3;
+    grid-row: 2/3;
+  }
+  .c3 {
+    grid-row: 3/4;
+    grid-column: 1/3;
+  }
+  .c5 {
+    grid-row: 4/5;
+    grid-column: 1/3;
   }
 }
